Fixes #200 by replacing usages of MagicMock with create_autospec. Added pytest-xdist in to speed up execution as autospeccing is incredibly slow (test times went from 30s with MagicMock to 338.23s with create_autospec...)

--- a/.coveragerc
+++ b/.coveragerc
@@ -1,5 +1,6 @@
 [run]
-parallel = false
+concurrency = multiprocessing
+parallel = true
 branch = true
 # Uncomment if coverage starts appearing to be incorrect. This makes the tests run at least twice as slowly.
 # timid  = true
