--- a/gitlab/pages.yml
+++ b/gitlab/pages.yml
@@ -34,6 +34,7 @@
   image: python:3.8.1
   stage: deploy
   script:
+    - pip install requests
     - source tasks/deploy.sh
     - set-versions "$(python tasks/make-version-string.py ${TARGET_BRANCH})" || true
     - bash tasks/retry-aborts.sh pip install nox
