--- a/lgtm.yml
+++ b/lgtm.yml
@@ -14,3 +14,5 @@ queries:
   - exclude: py/inheritance/incorrect-overridden-signature
   # This gives far too many false positives for me to remotely care now.
   - exclude: py/similar-function
+  # Gives false positives everywhere for package `__init__.py`'s that import submodules into their namespace.
+  - exclude: py/import-own-module
