Update .gitlab-ci.yml to use new License-Scanning template over deprecated License-management

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -34,4 +34,4 @@ include:
   - local: "/gitlab/deploy.yml"
   - template: "Dependency-Scanning.gitlab-ci.yml"
   - template: "SAST.gitlab-ci.yml"
-  - template: "License-Management.gitlab-ci.yml"
+  - template: "License-Scanning.gitlab-ci.yml"
