Reworked conduit around client runtime management.
- Allowed customising of shard identify pause period for testing (5s is a long time...)
- Handled GatewayConnectionClosedError, GatewayClientClosedError in Client
- Fixed bug in Gateway where HTTP session was never closed, leading to more errors.
- Reduced verbosity of some logging, added logging in elsewhere for debugging.
- Added conduit for optional async_timeout calls to hikari.internal_utilities.aio.
- Added missing exports to `__all__` for hikari.orm.models.presences, media, invites
- Client#_init_new_application_fabric now suppresses closure issues.
- Client#close is now called Client#shutdown
- Client#start now does not wait for the bot to shut down, it only waits for shards to IDENTIFY.
- Client#join has been added to perform the awaiting of shutdown that Client#start did previously.
- Client#run now handles SIGINT and SIGTERM correctly.
- Client#destroy has been implemented to enable you to destroy the bot immediately if desired.
- Client#shutdown now has an optional timeout flag that defines how long to wait for shards to close
    before Client#destroy is forcefulyl invoked.
- STARTUP and SHUTDOWN events are removed. They have been replaced with:
    - PRE_STARTUP - invoked before fabric creation (useful for initializing database pools, and resources
        that need to be available before we start receiving events).
    - POST_STARTUP - invoked after all shards have IDENTIFYed (useful for starting long running tasks, etc)
    - PRE_SHUTDOWN - invoked when Client#shutdown is called for the first time, but before anything is actually
        shut down. This is useful for stopping long running tasks, etc.
    - POST_SHUTDOWN - invoked when Client#shutdown is called for the first time AFTER the shards have
        disconnected. This is useful for shutting down resources such as database pools. This is still triggered
        even if exceptions occurred while both running and closing the Client, before allo

--- a/.gitignore
+++ b/.gitignore
@@ -32,8 +32,8 @@ pip-wheel-metadata/
 .[nt]ox/
 
 # Coverage-generated files
-.coverage
-**/*,cover
+.coverage*
+**/*,cover*
 
 # PyTest-generated files
 .pytest/
