git commit -am "Fixed coverage coalesce issue, fixed type checking mistake.
Hopefully should suppress errors such as these:

$ bash tasks/retry-aborts.sh pip install coverage
 #1 Collecting coverage
 Downloading coverage-5.0.3-cp38-cp38-manylinux1_x86_64.whl (228 kB)
 Installing collected packages: coverage
 Successfully installed coverage-5.0.3
 $ ls public
 coverage
 pytest-c3.8.0.coverage
 pytest-c3.8.1.coverage
 pytest-c3.9.coverage
 $ coverage combine public/*.coverage
 $ coverage report
 No source for code: '/builds/davfsa/hikari/.nox/test/lib/python3.8/site-packages/_pytest/capture.py'.
 Aborting report output, consider using -i.
 ERROR: Job failed: exit code 1

--- a/gitlab/test.yml
+++ b/gitlab/test.yml
@@ -102,7 +102,7 @@ coverage-coalesce:
     - bash tasks/retry-aborts.sh pip install coverage
     - ls public
     - coverage combine public/*.coverage
-    - coverage report
+    - coverage report -i
   coverage: /^TOTAL[\s\d%]+\s(\d+(?:\.\d+)?\%)$/
   only:
     - branches
