--- a/gitlab/analysis.yml
+++ b/gitlab/analysis.yml
@@ -16,7 +16,7 @@
 # along with Hikari. If not, see <https://www.gnu.org/licenses/>.
 .tools-base:
   image: python:3.8.1
-  stage: test
+  stage: verify
   before_script:
     - bash tasks/retry-aborts.sh pip install nox
   only:
@@ -29,12 +29,6 @@ black:
   extends: .tools-base
   script:
     - bash tasks/retry-aborts.sh nox -s format -- --check --diff
-
-### Now part of CI with GitLab extensions, also includes gitleaks and trufflehog
-# bandit:
-#   extends: .tools-base
-#   script:
-#     - bash tasks/retry-aborts.sh nox -s sast
 
 safety:
   extends: .tools-base
