Update .gitlab-ci.yml [skip ci]

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -33,5 +33,5 @@ include:
   - local: "/gitlab/pages.yml"
   - local: "/gitlab/deploy.yml"
   - template: "Dependency-Scanning.gitlab-ci.yml"
-  - template: "SAST.gitlab-ci.yml"
+  #- template: "SAST.gitlab-ci.yml"
   - template: "License-Scanning.gitlab-ci.yml"
