Update analysis.yml to re-enable bandit

--- a/gitlab/analysis.yml
+++ b/gitlab/analysis.yml
@@ -35,6 +35,11 @@ safety:
   script:
     - bash tasks/retry-aborts.sh nox -s safety
 
+bandit:
+  extends: .tools-base
+  script:
+    - bash tasks/retry-aborts.sh nox -s bandit 
+
 pylint:
   extends: .tools-base
   script:
