--- a/gitlab/pages.yml
+++ b/gitlab/pages.yml
@@ -36,10 +36,10 @@
   script:
     - pip install requests
     - source tasks/deploy.sh
-    - bash tasks/retry-aborts.sh pip install nox
+    - bash tasks/retry_aborts.sh pip install nox
     - git clone ${CI_REPOSITORY_URL} -b ${TARGET_BRANCH} hikari_docs_${TARGET_BRANCH} --depth=1
     - cd hikari_docs_${TARGET_BRANCH}
-    - bash tasks/retry-aborts.sh nox -s documentation
+    - bash tasks/retry_aborts.sh nox -s documentation
     - rm ../public -rf && mkdir ../public
     - mv public "../public/${TARGET_BRANCH}"
 
@@ -70,8 +70,8 @@ test-pages:
   stage: test
   allow_failure: false
   script:
-    - bash tasks/retry-aborts.sh pip install nox
-    - bash tasks/retry-aborts.sh nox -s documentation
+    - bash tasks/retry_aborts.sh pip install nox
+    - bash tasks/retry_aborts.sh nox -s documentation
   artifacts:
     paths:
       - public/
