Revamps more deployment logic and CI running logic to try and speed jobs up a bit.
License checking is now only scheduled.

Introduces a `skip deploy` that works like `skip ci` to force staging/master deployments
to be skipped.

Fixes a bug in version update logic where we are on 1.2.3
and expect to be bumped to 1.2.4.dev but that never happens.

Fixes the broken _about.py version from last deployment.

Updates deployment version generation tests.

Hopefully fixes pages not working on deployment by making them deploy earlier. This is an
ongoing GitLab bug at https://gitlab.com/gitlab-org/gitlab/issues/29257

Staging and master now have staging/prod URLs for environments, which probably does a
thing or whatever.

CI commit messages have changed a little bit.

--- a/gitlab/analysis.yml
+++ b/gitlab/analysis.yml
@@ -16,7 +16,7 @@
 # along with Hikari. If not, see <https://www.gnu.org/licenses/>.
 .tools-base:
   image: python:3.8.1
-  stage: verify
+  stage: test
   before_script:
     - bash tasks/retry_aborts.sh pip install nox
   only:
@@ -35,11 +35,6 @@ safety:
   script:
     - bash tasks/retry_aborts.sh nox -s safety
 
-bandit:
-  extends: .tools-base
-  script:
-    - bash tasks/retry_aborts.sh nox -s sast
-
 pylint:
   extends: .tools-base
   script:
@@ -47,3 +42,27 @@ pylint:
   artifacts:
     reports:
       junit: public/pylint.xml
+
+include:
+  - template: "Dependency-Scanning.gitlab-ci.yml"
+  - template: "SAST.gitlab-ci.yml"
+  - template: "License-Scanning.gitlab-ci.yml"
+
+sast:
+  variables:
+    SAST_BANDIT_EXCLUDED_PATHS: tests/*,docs/*,gitlab/*,insomnia/*,public/*,tasks/*,noxfile.py
+    SAST_EXCLUDED_PATHS: tests/*,docs/*,gitlab/*,insomnia/*,public/*,tasks/*,noxfile.py
+
+license_scanning:
+  # Overly slow to run and not very important, so skip normally to get 5 minutes back on 
+  # each pipeline.
+  only:
+    - schedules
+
+dependency_scanning:
+  only:
+    - merge_requests
+    - schedules
+
+
+
