--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -17,7 +17,7 @@
 
 stages:
   - test
-  - verify
+  - results
   - deploy
   - post-deploy
 
@@ -25,16 +25,8 @@ variables:
   DOCKER_DRIVER: "overlay2"
   PIP_CACHE_DIR: "$CI_PROJECT_DIR/.cache/pip"
  
-sast:
-  variables:
-    SAST_BANDIT_EXCLUDED_PATHS: tests/*,docs/*,gitlab/*,insomnia/*,public/*,tasks/*,noxfile.py
-    SAST_EXCLUDED_PATHS: tests/*,docs/*,gitlab/*,insomnia/*,public/*,tasks/*,noxfile.py
-
 include:
   - local: "/gitlab/test.yml"
   - local: "/gitlab/analysis.yml"
   - local: "/gitlab/pages.yml"
   - local: "/gitlab/deploy.yml"
-  - template: "Dependency-Scanning.gitlab-ci.yml"
-  - template: "SAST.gitlab-ci.yml"
-  - template: "License-Scanning.gitlab-ci.yml"
