--- a/.editorconfig
+++ b/.editorconfig
@@ -3,13 +3,13 @@ charset = utf-8
 end_of_line = lf
 indent_size = 4
 indent_style = space
-insert_final_newline = false
+insert_final_newline = true
 max_line_length = 120
 tab_width = 4
-ij_continuation_indent_size = 8
+ij_continuation_indent_size = 4 
 ij_formatter_off_tag = @formatter:off
 ij_formatter_on_tag = @formatter:on
-ij_formatter_tags_enabled = false
+ij_formatter_tags_enabled = true
 ij_smart_tabs = false
 ij_wrap_on_typing = false
 
@@ -66,7 +66,7 @@ ij_html_text_wrap = normal
 
 [{*.md,*.markdown}]
 ij_visual_guides = 80,100,120
-ij_wrap_on_typing = false
+ij_wrap_on_typing = true
 
 [{*.pyw,*.py}]
 ij_continuation_indent_size = 4
@@ -147,7 +147,7 @@ ij_shell_minify_program = false
 ij_shell_redirect_followed_by_space = true
 ij_shell_switch_cases_indented = true
 
-[{test_state_registry_impl,*.yml,*.yaml}]
+[{*.yml,*.yaml}]
 ij_continuation_indent_size = 2
 ij_visual_guides = 80
 ij_yaml_keep_indents_on_empty_lines = false
