More client test cases, and removal of magic constants; documentation.
- More Client test cases have been added.
- Fixed several potential bugs in net code.
- Gateway has been redocumented in the new style.
- Removed magic opcodes and magic close codes from gateway into a new set of enums.
- Intents are now in a hikari.net.codes module with other enums.
- HTTP client now uses HTTP status codes in an enum rather than magic numbers.
- HTTP client now supports JSON status codes.
- Tested hikari.net errors module.
- Reimplemented structure of hikari.net errors as it was broken and messy.
- Client now defaults to reporting API status.

--- a/.coveragerc
+++ b/.coveragerc
@@ -4,6 +4,8 @@ parallel = true
 branch = true
 # Uncomment if coverage starts appearing to be incorrect. This makes the tests run at least twice as slowly.
 # timid  = true
+omit =
+    hikari/__main__.py
 
 [report]
 precision = 2
