--- a/gitlab/test.yml
+++ b/gitlab/test.yml
@@ -21,6 +21,7 @@ include:
   - template: "License-Scanning.gitlab-ci.yml"
 
 sast:
+  interruptible: true
   variables:
     SAST_BANDIT_EXCLUDED_PATHS: tests/*,docs/*,gitlab/*,insomnia/*,public/*,tasks/*,noxfile.py
     SAST_EXCLUDED_PATHS: tests/*,docs/*,gitlab/*,insomnia/*,public/*,tasks/*,noxfile.py
@@ -28,10 +29,12 @@ sast:
 license_scanning:
   # Overly slow to run and not very important, so skip normally to get 5 minutes back on
   # each pipeline.
+  interruptible: true
   only:
     - schedules
 
 dependency_scanning:
+  interruptible: true
   only:
     - merge_requests
     - schedules
@@ -57,22 +60,27 @@ dependency_scanning:
       - .venv/
 
 .cpython-3.8.0:
+  interruptible: true
   image: python:3.8.0
   extends: .venv
 
 .cpython-3.8.1:
+  interruptible: true
   image: python:3.8.1
   extends: .venv
 
 .cpython-3.9-rc:
+  interruptible: true
   image: python:3.9-rc
   extends: .venv
-
+  
 .cpython-tool-alpine:
+  interruptible: true
   image: python:3.8.1-alpine
   extends: .venv
 
 .cpython-tool-buster:
+  interruptible: true
   extends: .cpython-3.8.1
 
 .nox-test:
